[package]
name = "smolmsdf"
version = "0.1.0"
edition = "2021"

[features]
default = ["ttf-parser"]
ttf-parser = ["dep:ttf-parser"]

[dependencies]
ttf-parser = { version = "0.20.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[profile.bench]
debug = true

[[bench]]
name = "bench"
harness = false